--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "mysql2": "^3.9.7",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "wait-on": "^7.2.0",
+    "wait-port": "^1.1.0"
   }
 }
