--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,8 @@ services:
     ports:
       - 3000:3000
     # command: sh -c './wait-for -t 60 db:3306 -- node index.js'
-    command: sh -c 'sleep 5; node index.js'
+    # command: sh -c 'sleep 5; node index.js'
+    command: node index.js
     networks:
       - internalnet
   frontend:
