--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,41 @@
-version: '3.8'
+version: "3.8"
 
 services:
   db:
     build: ./db
-    restart: always                     
+    restart: always
     environment:
-      MYSQL_DATABASE: 'uni_db'              
-      MYSQL_USER: 'user'               
-      MYSQL_PASSWORD: 'password'          
-      MYSQL_ROOT_PASSWORD: 'password'
-      MYSQL_ROOT_USER: 'root'                    
+      MYSQL_DATABASE: "uni_db"
+      MYSQL_USER: "user"
+      MYSQL_PASSWORD: "password"
+      MYSQL_ROOT_PASSWORD: "password"
+      MYSQL_ROOT_USER: "root"
     expose:
-      - '3306'
+      - "3306"
     ports:
       - 3306:3306
     volumes:
       - mysql-db:/var/lib/mysql
-    container_name: 'db'
+    container_name: "db"
     command: --default-authentication-plugin=caching_sha2_password
     networks:
       - internalnet
   backend:
     depends_on:
-      - 'db'
+      - "db"
     build: ./backend
     expose:
-      - '3000'
+      - "3000"
     ports:
       - 3000:3000
-    # command: sh -c './wait-for -t 60 db:3306 -- node index.js'
-    # command: sh -c 'sleep 5; node index.js'
-    command: node index.js
     networks:
       - internalnet
   frontend:
     depends_on:
-      - 'backend'
+      - "backend"
     build: ./frontend
     expose:
-      - '80'
+      - "80"
     ports:
       - 9080:80
     networks:
